Updated Blog for launch

--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'How we landed the following highly coveted opportunities') %>
+<% provide(:title, 'How we landed the following types of opportunities') %>
 
 <!--Put picture for post here -->
 <br>
@@ -13,7 +13,7 @@
   </div>
 
   <div class="span8">
-    <h1 class="text-center"><%= link_to "How we landed these highly coveted opportunities", blog_path, class: 'NoUnderlineForLink' %></h1>
+    <h1 class="text-center"><%= link_to "How we landed the following types of opportunities", blog_path, class: 'NoUnderlineForLink' %></h1>
   </div>
 
   <div class="span2">
@@ -47,26 +47,34 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">We're sharing the strategies, challenges and mistakes we learned in securing highly coveted opportunities.</h1>
+    <h1 class="text-center postPreviewContent">We're sharing the strategies, challenges and mistakes we learned in securing highly coveted positions.</h1>
     
     <hr>
-    <h5 class="blogPostText">Welcome to our blog! Here we will be sharing our strategies, mistakes and challenges of successfully securing various professional and academic opportunities. Our posts will be curated from our team at AdviceShare, our network of AdviceShare Advisers, and fellow bloggers. Below you can find our initial list of posts:<h5>
+
+    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series Securing Highly Coveted Opoortunities<h5>
+    <h5 class="blogPostText">"I'm really interested in doing XYZ and would love to hear the advice of someone who has already successfully done it."
+    <br><br>
+    We've had this thought plenty of times, which sparked a month long sprint to launch the series you’re reading right now.
+    <br><br>
+    We want to share our strategies, mistakes and challenges of successfully securing various professional and academic opportunities. We'll be curating posts from our team at AdviceShare, our network of AdviceShare Advisers, and fellow bloggers.
+    <br><br>
+    Here's an idea of what we'll be covering in our series:<h5>
 
 
     <span class="tab">
-      <h4 class="tab">Applying to school</h4>
+      <h4 class="tab">Grad Schools</h4>
        <ul class="extraTab">
-        <li><%= link_to "Here’s exactly what I did to get into Columbia Law School;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Applying to Business School; Insights from a first year student at Harvard;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "3 things I wish I did during college that would have made applying to Grad School easier;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Getting into MFA programs are tough. Here is how I got into the Actors Studio Drama School two months before classes started.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Here’s exactly what I did to get into Columbia Law School", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Applying to Business School: Insights from a first year student at Harvard", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Getting Into MFA Programs Are Tough. Here is How I got into the Actors Studio Drama School Two Months Before Classes Started.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
 
-      <h4 class="tab">Securing Internships</h4>
+      <h4 class="tab">Internships</h4>
 
       <ul class="extraTab">
         <li><%= link_to "In Pursuit of the Dream: How I Landed a Position as A White House Intern", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "5 things the real world has taught me since I graduated 3 years ago;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
         <li><%= link_to "3 things I wish I did during college that would have made applying to Grad School easier;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
         <li><%= link_to "Landing an opportunity at Google; Insights from a two-time intern and full-time employee", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
@@ -74,17 +82,18 @@
       <h4 class="tab">Full-time opportunities</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "How I got a job on Wall Street even though I knew nothing about finance;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Transitioning from finance to tech, here's how I did it", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Here's what I did to break into the sports world", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "How I Got a Job on Wall Street Even Though I Knew Nothing about Finance;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Transitioning from Finance to Tech, Here's How I Did it", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Advice on Breaking into the Sports World", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
 
-      <h4 class="tab">General</h4>
+      <h4 class="tab">Life Skills</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "4 interview techniques that may surprise you;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "How to get a letter of recommendation from a professor who doesn't remember you;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "The Art & Science of networking, part 1; The Art & Science of networking, part 2;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "4 Interview Techniques that May Surprise You;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Get a Letter of Recommendation from Someone Who Doesn't Remember You;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "The Art & Science of Networking, Part 1", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "The Art & Science of Networking, Part 2", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
     </span>
 
