--- a/app/assets/stylesheets/blogposts.css.scss
+++ b/app/assets/stylesheets/blogposts.css.scss
@@ -128,6 +128,15 @@ IMG.blogpostimage {
     margin-top: -80px;
     width: 40%; }
 
+IMG.signupPageimage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -80px;
+    margin-bottom: -150px;
+    width: 40%; }
+
+
 .centerContent{
     margin-left: auto;
     margin-right: auto;
