--- a/app/views/signups/_whiteASLogo.html.erb
+++ b/app/views/signups/_whiteASLogo.html.erb
@@ -1,7 +1,4 @@
-<br>
-<br>   
-        
-<%= link_to image_tag("https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+full+white+logo+bigger.png"), root_path, :id => "childLanding" %>
+<a href="http://AdviceShare.co/blog/"><img class="signupPageimage" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-Oct-7-lowercase-white-ver-c.png" /></a>
 
 
 
