Update blog again

--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -14,6 +14,7 @@
 
   <div class="span8">
     <h1 class="text-center"><%= link_to "How we landed the following types of opportunities", blog_path, class: 'NoUnderlineForLink' %></h1>
+    <br>
   </div>
 
   <div class="span2">
@@ -31,6 +32,7 @@
     <!--<h6 class="text-center"><%= link_to "By The AdviceShare team", "http://www.AdviceShare.co/blog/I-Am-Calling-This-Page-This", class: 'blogAuthorName' %><%= link_to " | Why is this anonymous?", "http://www.AdviceShare.co/blog/I-Am-Calling-This-Page-This", class: 'blogAuthorName' %></h6>-->
 
     <h4 class="text-center"><%= link_to (image_tag "https://s3.amazonaws.com/AdviceShare/AS_Favicon.png", :title => 'Image_Title', class: 'blogAuthorImage') %><%= link_to "By The AdviceShare team", "http://www.AdviceShare.co/blog/I-Am-Calling-This-Page-This", class: 'blogAuthorName' %></h4>
+    <br>
   </div>
 
   <div class="span3">
@@ -51,56 +53,64 @@
     
     <hr>
 
-    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series Securing Highly Coveted Opoortunities<h5>
+    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series, Securing Highly Coveted Opportunities.<h5>
+    <br>
     <h5 class="blogPostText">"I'm really interested in doing XYZ and would love to hear the advice of someone who has already successfully done it."
     <br><br>
-    We've had this thought plenty of times, which sparked a month long sprint to launch the series you’re reading right now.
+    We've had this thought plenty of times, which sparked a sprint to launch the series you’re reading right now.
     <br><br>
     We want to share our strategies, mistakes and challenges of successfully securing various professional and academic opportunities. We'll be curating posts from our team at AdviceShare, our network of AdviceShare Advisers, and fellow bloggers.
     <br><br>
     Here's an idea of what we'll be covering in our series:<h5>
     <br>
-    <br>
 
       <h4 class="tab">Grad Schools</h4>
        <ul class="extraTab">
         <li><%= link_to "Here’s exactly what I did to get into Columbia Law School", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Applying to Business School: Insights from a first year student at Harvard", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Applying to Business School: Insights from a first year student at Harvard.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
         <li><%= link_to "Getting Into MFA Programs Are Tough. Here is How I got into the Actors Studio Drama School Two Months Before Classes Started.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
+      <br>
 
       <h4 class="tab">Internships</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "In Pursuit of the Dream: How I Landed a Position as A White House Intern", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "3 things I wish I did during college that would have made applying to Grad School easier;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Landing an opportunity at Google; Insights from a two-time intern and full-time employee", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "In Pursuit of the Dream: How I Landed a Position as A White House Intern.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "3 things I wish I did during college that would have made applying to Grad School easier.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Landing an opportunity at Google; Insights from a two-time intern and full-time employee.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
       <br>
 
       <h4 class="tab">Full-time opportunities</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "How I Got a Job on Wall Street Even Though I Knew Nothing about Finance;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Transitioning from Finance to Tech, Here's How I Did it", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Advice on Breaking into the Sports World", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "How I Got a Job on Wall Street Even Though I Knew Nothing about Finance.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Transitioning from Finance to Tech, Here's How I Did it.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Against The Odds: Advice on Breaking into the Sports World.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Navigating the Case Interview to get into Management Consulting.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+
       </ul>
       <br>
 
       <h4 class="tab">Life Skills</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "4 Interview Techniques that May Surprise You;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Get a Letter of Recommendation from Someone Who Doesn't Remember You;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "The Art & Science of Networking, Part 1", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "The Art & Science of Networking, Part 2", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "4 Interview Techniques that May Surprise You.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Get a Letter of Recommendation from Someone Who Doesn't Remember You.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "The Art & Science of Networking, Part 1.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "The Art & Science of Networking, Part 2.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
       <br>
 
 
-    <h5 class="blogPostText">Have suggestions for additional posts? Want to share some general thoughts? Want to write a post? Just let us know in the comments below or email us! If you want to be notified when a post launches just sign up below.</h5>
+    <h5 class="blogPostText">Have suggestions for additional posts in the series? Want to share your own experience? Just let us know in the comments below or
+    <a class="NoUnderlineForBlogLinks" href="mailto:general@AdviceShare.co">email us!</a> If you want to be notified when a post launches just sign up below.
+    <br>
+    <br>
+    Thank you for the support! Please share below if its not too much trouble :)
+    </h5>
 
   </div>
 
