--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -53,7 +53,7 @@
     
     <hr>
 
-    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series Securing Highly Coveted Opportunities.<h5>
+    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series, Securing Highly Coveted Opportunities.<h5>
     <br>
     <h5 class="blogPostText">"I'm really interested in doing XYZ and would love to hear the advice of someone who has already successfully done it."
     <br><br>
@@ -67,8 +67,8 @@
       <h4 class="tab">Grad Schools</h4>
        <ul class="extraTab">
         <li><%= link_to "Here’s exactly what I did to get into Columbia Law School", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Applying to Business School: Insights from a first year student at Harvard", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Applying to Business School: Insights from a first year student at Harvard.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
         <li><%= link_to "Getting Into MFA Programs Are Tough. Here is How I got into the Actors Studio Drama School Two Months Before Classes Started.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
       <br>
@@ -76,29 +76,31 @@
       <h4 class="tab">Internships</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "In Pursuit of the Dream: How I Landed a Position as A White House Intern", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "3 things I wish I did during college that would have made applying to Grad School easier;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Landing an opportunity at Google; Insights from a two-time intern and full-time employee", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "In Pursuit of the Dream: How I Landed a Position as A White House Intern.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "3 things I wish I did during college that would have made applying to Grad School easier.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Landing an opportunity at Google; Insights from a two-time intern and full-time employee.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
       <br>
 
       <h4 class="tab">Full-time opportunities</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "How I Got a Job on Wall Street Even Though I Knew Nothing about Finance;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Transitioning from Finance to Tech, Here's How I Did it", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Advice on Breaking into the Sports World", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "How I Got a Job on Wall Street Even Though I Knew Nothing about Finance.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Transitioning from Finance to Tech, Here's How I Did it.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Against The Odds: Advice on Breaking into the Sports World.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Navigating the Case Interview to get into Management Consulting.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+
       </ul>
       <br>
 
       <h4 class="tab">Life Skills</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "4 Interview Techniques that May Surprise You;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Get a Letter of Recommendation from Someone Who Doesn't Remember You;", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "The Art & Science of Networking, Part 1", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "The Art & Science of Networking, Part 2", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "4 Interview Techniques that May Surprise You.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Get a Letter of Recommendation from Someone Who Doesn't Remember You.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "The Art & Science of Networking, Part 1.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "The Art & Science of Networking, Part 2.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
       <br>
 
