Update first post title

--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'How we landed the following types of opportunities') %>
+<% provide(:title, 'How we landed the following highly coveted of opportunities') %>
 
 <!--Put picture for post here -->
 <br>
