--- a/app/assets/stylesheets/blogposts.css.scss
+++ b/app/assets/stylesheets/blogposts.css.scss
@@ -100,10 +100,9 @@ html,body {
     -webkit-border-radius: 40%;
     border-radius: 40%;
 }
-.addthis_32x32_style{
-  -moz-border-radius: 40% important;
-    -webkit-border-radius: 40% important;
-    border-radius: 40% important;
+
+.shareLinks{
+  width: 33px;
 }
 
 .roundAuthorImage{
