--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -8,9 +8,10 @@
                 <br>
         <br>
         <br>
-        <h2 class="text-center">Like match.com, but for Advice.</h4>
+        <h2 class="text-center">Like match.com for Advice.</h4>
           <br>
-        <h4 class="text-center">AdviceShare makes it easier for people seeking professional and academic advice to connect<br> with those who want to help, and vice versa.</h4>
+        <h4 class="text-center">AdviceShare makes it easier for people seeking an edge to connect<br> with those who want to help, and vice versa.</h4>
+        
    
         <!--<h2 class="text-center">An easier way to get the advice you're looking for.</h2> -->
      <!--<div class="span10">
