--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -1,9 +1,25 @@
 <% provide(:title, 'How we landed the following highly coveted of opportunities') %>
 
+<% content_for :for_socialmedia do %>
+  <!--Facebook-->
+    <meta property="og:type" content="blog"/>
+    <meta property="og:title" content="AdviceShare" />
+    <meta property="og:url" content="www.AdviceShare.co" />
+    <meta property="og:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa." />
+    <meta property="fb:admins" content="755565431"/>
+    <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size.png" />
+    
+    <!--Twitter-->
+    <meta name="twitter:card" content="blog">
+    <meta name="twitter:image" content="https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size.png">
+    <meta name="twitter:url" content="http://www.AdviceShare.co">
+    <meta name="twitter:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
+    
+<% end %>
 <!--Put picture for post here -->
 <br>
 <div class="row">
-  <a href="http://AdviceShare.co/blog/"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Chest+treasure.jpg" /></a>
+  <a href="http://AdviceShare.co/blog/" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Chest+treasure.jpg" /></a>
 </div>
 
 <!--Put Blog post title here-->
