--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -113,6 +113,15 @@ html,body {
         margin-left: -20px;
       }
 
+      IMG.signupPageimage {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -80px;
+        margin-bottom: -150px;
+        width: 40%; 
+      }
+
   /* Landing Page - for How it works & Signup box */
 
       .signupparent {
