--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -2,11 +2,11 @@
 
 <% content_for :for_socialmedia do %>
   <!--Facebook-->
-    <meta property="og:url" content="www.AdviceShare.co" />
+    <meta property="og:url" content="www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions" />
     <meta property="og:description" content="AdviceSasdkjaslkdjl;sadlahare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa." />
         
     <!--Twitter-->
-    <meta name="twitter:url" content="http://www.AdviceShare.co">
+    <meta name="twitter:url" content="http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions" />
     <meta name="twitter:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
 <% end %>
 
