--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -1,9 +1,20 @@
-<% provide(:title, 'How we landed the following highly coveted of opportunities') %>
+<% provide(:title, 'How we landed the following professional and academic opportunities') %>
+
+<% content_for :for_socialmedia do %>
+  <!--Facebook-->
+    <meta property="og:url" content="www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions" />
+    <meta property="og:description" content="AdviceSasdkjaslkdjl;sadlahare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa." />
+        
+    <!--Twitter-->
+    <meta name="twitter:url" content="http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions" />
+    <meta name="twitter:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
+<% end %>
+
 
 <!--Put picture for post here -->
 <br>
 <div class="row">
-  <a href="http://AdviceShare.co/blog/"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Chest+treasure.jpg" /></a>
+  <a href="http://AdviceShare.co/blog/" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Chest+treasure.jpg" /></a>
 </div>
 
 <!--Put Blog post title here-->
