--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -1,12 +1,13 @@
 <% provide(:title, 'How we landed the following professional and academic opportunities') %>
 
 <% content_for :for_socialmedia do %>
+  <!--<meta http-equiv="refresh" content="0; url=http://www.adviceshare.co/blog/highly-coveted-professional-and-academic-positions">-->
   <!--Facebook-->
-    <meta property="og:url" content="www.AdviceShare.co" />
-    <meta property="og:description" content="AdviceSasdkjaslkdjl;sadlahare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa." />
+    <meta property="og:url" content="www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions" />
+    <meta property="og:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa." />
         
     <!--Twitter-->
-    <meta name="twitter:url" content="http://www.AdviceShare.co">
+    <meta name="twitter:url" content="http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions" />
     <meta name="twitter:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
 <% end %>
 
@@ -24,7 +25,7 @@
   </div>
 
   <div class="span8">
-    <h1 class="text-center"><%= link_to "How we landed the following types of opportunities", blog_path, class: 'NoUnderlineForLink' %></h1>
+    <h1 class="text-center"><%= link_to "How we landed the following types of opportunities", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
     <br>
   </div>
 
