--- a/app/views/layouts/_landingpagefooter.html.erb
+++ b/app/views/layouts/_landingpagefooter.html.erb
@@ -2,7 +2,7 @@
     <div class="childLanding">
         <br>
         <br>
-        <a><%= link_to "Blog", blog_path, class: 'headerlinks' %></a>
+        <a><%= link_to "Blog", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'headerlinks' %></a>
         <small>  |  <small>© 2013 <a class="headerlinks" href="mailto:general@AdviceShare.co">AdviceShare</a>. All rights reserved.</small>
 	</div>
 </div>
