--- a/app/views/blogsignups/_blogShareSignupsComments.html.erb
+++ b/app/views/blogsignups/_blogShareSignupsComments.html.erb
@@ -10,7 +10,7 @@
 		<a class="addthis_button_reddit" style="width: %; margin-right: 40px;"></a>
 		<a class="addthis_button_digg" style="width: %; margin-right: 40px;"></a>
 		<a class="addthis_button_email" style="width: %; margin-right: 40px;"></a>
-		<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=www.adviceshare.co&p[images][0]=https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size.png&p[title]=Adviceshare&p[summary]=does%20this%20work?" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="shareLinks" src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/Facebook+Icon.png" /></a>
+		<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=www.adviceshare.co&p[images][0]=https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size.png&p[title]=Adviceshare&p[summary]=does%20this%20work?" title="Facebook" alt="Facebook Share"><img class="shareLinks" src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/Facebook+Icon.png" /></a>
 		
 		<!--
 		<a class="addthis_button_compact" style="width: %; margin-right: 40px;"></a>
