--- a/app/views/blogsignups/_blogShareSignupsComments.html.erb
+++ b/app/views/blogsignups/_blogShareSignupsComments.html.erb
@@ -12,9 +12,9 @@
 		<a class="addthis_button_email" style="width: %; margin-right: 40px;"></a>
 		<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=www.adviceshare.co&p[images][0]=https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size.png&p[title]=Adviceshare&p[summary]=does%20this%20work?" title="Facebook" alt="Facebook Share"><img class="shareLinks" src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/Facebook+Icon.png" /></a>
 		
-		<!--
+		
 		<a class="addthis_button_compact" style="width: %; margin-right: 40px;"></a>
-		<a class="addthis_button_facebook" style="width: %; margin-right: 40px;"></a>-->
+		<!--<a class="addthis_button_facebook" style="width: %; margin-right: 40px;"></a>-->
 		</div>
 			<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 			<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5283f0c4215e06a6"></script>
