--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -15,7 +15,7 @@
 <!--Put picture for post here -->
 <br>
 <div class="row">
-  <a href="http://AdviceShare.co/blog/" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Chest+treasure.jpg" /></a>
+  <a href="http://www.AdviceShare.co/blog/" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Chest+treasure.jpg" /></a>
 </div>
 
 <!--Put Blog post title here-->
