update share options

--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'How we landed the following professional and academic opportunities') %>
 
 <% content_for :for_socialmedia do %>
-  <!--<meta http-equiv="refresh" content="0; url=http://www.adviceshare.co/blog/highly-coveted-professional-and-academic-positions">-->
+  <meta http-equiv="refresh" content="0; url=http://www.adviceshare.co/blog/highly-coveted-professional-and-academic-positions">
   <!--Facebook-->
     <meta property="og:url" content="www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions" />
     <meta property="og:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa." />
