--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -25,7 +25,7 @@
   </div>
 
   <div class="span8">
-    <h1 class="text-center"><%= link_to "How we landed the following types of opportunities", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
+    <h1 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
     <br>
   </div>
 
