Update landing page footer

--- a/app/views/blogsignups/_blogShareSignupsComments.html.erb
+++ b/app/views/blogsignups/_blogShareSignupsComments.html.erb
@@ -7,6 +7,7 @@
 		
 		<a class="addthis_button_twitter" style="width: %; margin-right: 40px;"></a>
 		<a class="addthis_button_linkedin" style="width: %; margin-right: 40px;"></a>
+		<a class="addthis_button_facebook" style="width: %; margin-right: 40px;"></a>
 		<a class="addthis_button_reddit" style="width: %; margin-right: 40px;"></a>
 		<a class="addthis_button_digg" style="width: %; margin-right: 40px;"></a>
 		<a class="addthis_button_email" style="width: %; margin-right: 40px;"></a>
