--- a/app/views/signups/_whiteASLogo.html.erb
+++ b/app/views/signups/_whiteASLogo.html.erb
@@ -1,4 +1,4 @@
-<a href="http://www.AdviceShare.co/blog/"><img class="signupPageimage" style="margin-bottom: -130px; margin-top: -65px;" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-Oct-7-lowercase-white-ver-c.png" /></a>
+<img class="signupPageimage" style="margin-bottom: -130px; margin-top: -65px;" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-Oct-7-lowercase-white-ver-c.png" />
 
 
 
