--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -25,7 +25,7 @@
   </div>
 
   <div class="span8">
-    <h1 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
+    <h1 class="text-center"><%= link_to "How we landed the following professional and academic positions", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
     <br>
   </div>
 
@@ -43,7 +43,7 @@
   <div class="span6">
     <!--<h6 class="text-center"><%= link_to "By The AdviceShare team", "http://www.AdviceShare.co/blog/I-Am-Calling-This-Page-This", class: 'blogAuthorName' %><%= link_to " | Why is this anonymous?", "http://www.AdviceShare.co/blog/I-Am-Calling-This-Page-This", class: 'blogAuthorName' %></h6>-->
 
-    <h4 class="text-center"><%= link_to (image_tag "https://s3.amazonaws.com/AdviceShare/AS_Favicon.png", :title => 'Image_Title', class: 'blogAuthorImage') %><%= link_to "By The AdviceShare team", "http://www.AdviceShare.co/blog/I-Am-Calling-This-Page-This", class: 'blogAuthorName' %></h4>
+    <h4 class="text-center"><%= link_to (image_tag "https://s3.amazonaws.com/AdviceShare/AS_Favicon.png", :title => 'Image_Title', class: 'blogAuthorImage') %><%= link_to "By The AdviceShare team", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions#author", class: 'blogAuthorName' %></h4>
     <br>
   </div>
 
@@ -61,11 +61,11 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">We're sharing the strategies, challenges and mistakes we learned in securing highly coveted positions.</h1>
+    <h1 class="text-center postPreviewContent">We're sharing the strategies, challenges and mistakes we learned in landing the following types of highly coveted positions.</h1>
     
     <hr>
 
-    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series, Securing Highly Coveted Opportunities.<h5>
+    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series, Landing Professional and Academic Opportunities.<h5>
     <br>
     <h5 class="blogPostText">"I'm really interested in doing XYZ and would love to hear the advice of someone who has already successfully done it."
     <br><br>
@@ -123,9 +123,7 @@
     <br>
     Thank you for the support! Please share below if its not too much trouble :)
     </h5>
-
-  </div>
-
+    
   <div class="span2">
   </div>
 
@@ -135,5 +133,36 @@
  <br>
 <br>
 
- <%= render 'blogsignups/blogShareSignupsComments' %>
+ <%= render 'blogsignups/blogShareSignups' %>
+
+ <!--Author detailed bio here-->
+<div class="row">
+  
+  <div class="span1">
+  </div>
+
+  <div class="span2" id="author">
+    <h4 class="text-center"><%= link_to (image_tag "https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+favicon.png", :title => 'Image_Title', class: 'blogAuthorImageDetailed'), style: 'width: 900%;' %></h4>
+    <br>
+  </div>
+
+  <div class="span7">
+    <h4 class="text-left blogPostText" style="margin-left: 40px;">
+      <b style="line-height: 130%;">About the author</b>
+    <h4 class="text-left blogPostText" style="margin-left: 40px;">
+      The AdviceShare team consists of people who want to help make it easier for you to land great opportunities by sharing their personal experiences. 
+    </h4>
+    <h4 class="text-left blogPostText" style="margin-left: 40px;">
+      All posts are curated by Malcolm Evans, Founder of AdviceShare (an easier way to give and receive advice). <a class="NoUnderlineForAuthorLinks" href="mailto:malcolm@AdviceShare.co" target="_blank">Reach out to him</a> or <a class="NoUnderlineForAuthorLinks" href="http://www.Twitter.com/malcolm_evans" target="_blank">follow him on Twitter</a>. 
+    </h4>
+  </div>
+  
+
+
+  <div class="span2">
+  </div>
+
+</div>
+
+ <%= render 'blogsignups/blogComments' %>
 
