--- a/app/views/blogsignups/_blogComments.html.erb
+++ b/app/views/blogsignups/_blogComments.html.erb
@@ -1,5 +1,5 @@
 <!-- COMMENTS -->
-<div class="row">
+<div class="row" style="margin-top: -40px;">
   
   <div class="span2">
   </div>
@@ -7,7 +7,6 @@
 
   <div class="span8">
     <!--Disqus Code-->
-    <br>
     <hr>
 
 		<div id="disqus_thread"></div>
